--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,15 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+
+      <router-link to="/pageOne">Go to Page One</router-link>
+      
+      <div class="content_wrapper">
+
+        <router-view></router-view>
+      </div>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
